--- a/values.yaml
+++ b/values.yaml
@@ -11,6 +11,9 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+image:
+  tag: "library/nginx:stable"
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
